src/objects/SFDC_Expense__c.object
<CustomObject>
    <description>Record Expenses on a Project incurred by  Resource.</description>
    <fields>
        <fullName>Air_Fare_Total__c</fullName>
        <formula>Air_Purchase_1__c  +  Air_Purchase_2__c  +  Air_Purchase_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air Fare Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_Purchase_1_Detail__c</fullName>
        <label>Air Purchase 1 Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Purchase_1__c</fullName>
        <label>Air Purchase 1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_Purchase_2_Detail__c</fullName>
        <label>Air Purchase 2 Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Purchase_2__c</fullName>
        <label>Air Purchase 2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Air_Purchase_3_Detail__c</fullName>
        <label>Air Purchase 3  Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Purchase_3__c</fullName>
        <label>Air Purchase 3</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approve__c</fullName>
        <label>Approve</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_to__c</fullName>
        <label>Billable to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Breakfast_Su__c</fullName>
        <label>Breakfast (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Breakfast_f__c</fullName>
        <label>Breakfast (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Breakfast_m__c</fullName>
        <label>Breakfast (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Breakfast_sa__c</fullName>
        <label>Breakfast (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Breakfast_t__c</fullName>
        <label>Breakfast (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Breakfast_th__c</fullName>
        <label>Breakfast (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Breakfast_w__c</fullName>
        <label>Breakfast (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Rental_1_Detail__c</fullName>
        <label>Car Rental 1 Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Rental_2_Detail__c</fullName>
        <label>Car Rental 2 Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Rental_3_Detail__c</fullName>
        <label>Car Rental 3 Detail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Rental_Total_2__c</fullName>
        <label>Car Rental Total 2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Rental_Total_3__c</fullName>
        <label>Car Rental Total 3</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Rental_Total__c</fullName>
        <formula>Car_Rental__c  +  Car_Rental_Total_2__c  +  Car_Rental_Total_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Car Rental Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Rental__c</fullName>
        <label>Car Rental Total 1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dinner_f__c</fullName>
        <label>Dinner (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dinner_m__c</fullName>
        <label>Dinner (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dinner_sa__c</fullName>
        <label>Dinner (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dinner_su__c</fullName>
        <label>Dinner (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dinner_t__c</fullName>
        <label>Dinner (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dinner_th__c</fullName>
        <label>Dinner (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dinner_w__c</fullName>
        <label>Dinner (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_Total__c</fullName>
        <formula>Gas_f__c  +  Gas_m__c  +  Gas_t__c  +  Gas_w__c  +  Gas_th__c  +  Gas_sa__c  +  Gas_su__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gas Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_f__c</fullName>
        <label>Gas (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_m__c</fullName>
        <label>Gas (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_sa__c</fullName>
        <label>Gas (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_su__c</fullName>
        <label>Gas (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_t__c</fullName>
        <label>Gas (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_th__c</fullName>
        <label>Gas (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_w__c</fullName>
        <label>Gas (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Tax_f__c</fullName>
        <label>Hotel &amp; Tax (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Tax_m__c</fullName>
        <label>Hotel &amp; Tax (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Tax_sa__c</fullName>
        <label>Hotel &amp; Tax (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Tax_su__c</fullName>
        <label>Hotel &amp; Tax (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Tax_t__c</fullName>
        <label>Hotel &amp; Tax (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Tax_th__c</fullName>
        <label>Hotel &amp; Tax (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Tax_w__c</fullName>
        <label>Hotel &amp; Tax (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Total__c</fullName>
        <formula>Hotel_Tax_m__c  +  Hotel_Tax_t__c  +  Hotel_Tax_w__c  +  Hotel_Tax_th__c  +  Internet_f__c  +  Hotel_Tax_sa__c  +  Hotel_Tax_su__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_Total__c</fullName>
        <formula>Internet_f__c  +  Internet_m__c  +  Internet_t__c  +  Internet_w__c  +  Internet_th__c  +  Internet_sa__c  +  Internet_su__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internet Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_f__c</fullName>
        <label>Internet (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_m__c</fullName>
        <label>Internet (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_sa__c</fullName>
        <label>Internet (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_su__c</fullName>
        <label>Internet (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_t__c</fullName>
        <label>Internet (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_th__c</fullName>
        <label>Internet (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internet_w__c</fullName>
        <label>Internet (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laundry_Su__c</fullName>
        <label>Laundry (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laundry_Total__c</fullName>
        <formula>Laundry_f__c  +  Laundry_m__c  +  Laundry_t__c  +  Laundry_w__c  +  Laundry_th__c  +  Laundry_sa__c  +  Laundry_Su__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Laundry Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laundry_f__c</fullName>
        <label>Laundry (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laundry_m__c</fullName>
        <label>Laundry (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laundry_sa__c</fullName>
        <label>Laundry (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laundry_t__c</fullName>
        <label>Laundry (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laundry_th__c</fullName>
        <label>Laundry (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Laundry_w__c</fullName>
        <label>Laundry (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lunch_f__c</fullName>
        <label>Lunch (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lunch_m__c</fullName>
        <label>Lunch (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lunch_sa__c</fullName>
        <label>Lunch (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lunch_su__c</fullName>
        <label>Lunch (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lunch_t__c</fullName>
        <label>Lunch (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lunch_th__c</fullName>
        <label>Lunch (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lunch_w__c</fullName>
        <label>Lunch (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meals_Total__c</fullName>
        <formula>TOTAL_MEALS_f__c  +  TOTAL_MEALS_sa__c  +  TOTAL_MEALS_su__c  +  TOTAL_MEALS_m__c  +  TOTAL_MEALS_t__c  +  TOTAL_MEALS_w__c  +  TOTAL_MEALS_th__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meals Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_Total__c</fullName>
        <formula>Mileage_f__c  +  Mileage_m__c  +  Mileage_t__c  +  Mileage_w__c  +  Mileage_th__c  +  Mileage_sa__c  +  Mileage_su__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_f__c</fullName>
        <label>Mileage (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_m__c</fullName>
        <label>Mileage (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_sa__c</fullName>
        <label>Mileage (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_su__c</fullName>
        <label>Mileage (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_t__c</fullName>
        <label>Mileage (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_th__c</fullName>
        <label>Mileage (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_w__c</fullName>
        <label>Mileage (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_1_f__c</fullName>
        <label>Misc 1 (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_1_m__c</fullName>
        <label>Misc 1 (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_1_sa__c</fullName>
        <label>Misc 1 (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_1_su__c</fullName>
        <label>Misc 1 (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_1_t__c</fullName>
        <label>Misc 1 (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_1_th__c</fullName>
        <label>Misc 1 (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_1_w__c</fullName>
        <label>Misc 1 (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_2_f__c</fullName>
        <label>Misc 2 (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_2_m__c</fullName>
        <label>Misc 2 (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_2_sa__c</fullName>
        <label>Misc 2 (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_2_su__c</fullName>
        <label>Misc 2 (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_2_t__c</fullName>
        <label>Misc 2 (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_2_th__c</fullName>
        <label>Misc 2 (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_2_w__c</fullName>
        <label>Misc 2 (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_f__c</fullName>
        <label>Notes (f)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_m__c</fullName>
        <label>Notes (m)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_sa__c</fullName>
        <label>Notes (sa)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_su__c</fullName>
        <label>Notes (su)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_t__c</fullName>
        <label>Notes (t)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_th__c</fullName>
        <label>Notes (th)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes_w__c</fullName>
        <label>Notes (w)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Food_f__c</fullName>
        <label>Other Food (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Food_m__c</fullName>
        <label>Other Food (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Food_sa__c</fullName>
        <label>Other Food (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Food_su__c</fullName>
        <label>Other Food (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Food_t__c</fullName>
        <label>Other Food (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Food_th__c</fullName>
        <label>Other Food (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Food_w__c</fullName>
        <label>Other Food (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Total__c</fullName>
        <formula>Misc_1_f__c  +  Misc_1_m__c  +  Misc_1_sa__c  +  Misc_1_su__c  +  Misc_1_t__c  +  Misc_1_th__c  +  Misc_1_w__c  + Misc_2_f__c  +  Misc_2_m__c  +  Misc_2_sa__c  +  Misc_2_su__c  +  Misc_2_t__c  +  Misc_2_th__c  +  Misc_2_w__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payable_to__c</fullName>
        <label>Payable to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipName>R00N60000001VqsnEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REPORT_TOTAL__c</fullName>
        <formula>Meals_Total__c  +  Hotel_Total__c  +  Air_Fare_Total__c  +  Car_Rental_Total__c  +  Other_Total__c  +  Internet_Total__c  +  Laundry_Total__c  +  Mileage_Total__c  +  Gas_Total__c  +  Taxi_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REPORT TOTAL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>SFDC_Resource__c</referenceTo>
        <relationshipName>R00N60000001VqtDEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <label>Submit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_MEALS_f__c</fullName>
        <formula>Breakfast_f__c   +  Lunch_f__c  +  Dinner_f__c  +  Other_Food_f__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL MEALS (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOTAL_MEALS_m__c</fullName>
        <formula>Breakfast_m__c   +  Lunch_m__c  +  Dinner_m__c  +  Other_Food_m__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL MEALS (m)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOTAL_MEALS_sa__c</fullName>
        <formula>Breakfast_sa__c   +  Lunch_sa__c  +  Dinner_sa__c  +  Other_Food_sa__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL MEALS (sa)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOTAL_MEALS_su__c</fullName>
        <formula>Breakfast_Su__c   +  Lunch_su__c  +  Dinner_su__c  +  Other_Food_su__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL MEALS (su)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOTAL_MEALS_t__c</fullName>
        <formula>Breakfast_t__c   +  Lunch_t__c  +  Dinner_t__c  +  Other_Food_t__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL MEALS (t)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOTAL_MEALS_th__c</fullName>
        <formula>Breakfast_th__c   +  Lunch_th__c  +  Dinner_th__c  +  Other_Food_th__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL MEALS (th)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOTAL_MEALS_w__c</fullName>
        <formula>Breakfast_w__c   +  Lunch_w__c  +  Dinner_w__c  +  Other_Food_w__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL MEALS (w)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxi_Total__c</fullName>
        <formula>Taxi_f__c  +  Taxi_m__c  +  Taxi_t__c  +  Taxi_w__c  +  Taxi_th__c  +  Taxi_sa__c  +  Taxi_su__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taxi Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxi_f__c</fullName>
        <label>Taxi (f)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxi_m__c</fullName>
        <label>Taxi (m)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxi_sa__c</fullName>
        <label>Taxi (sa)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxi_su__c</fullName>
        <label>Taxi (su)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxi_t__c</fullName>
        <label>Taxi (t)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxi_th__c</fullName>
        <label>Taxi (th)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxi_w__c</fullName>
        <label>Taxi (w)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week_of__c</fullName>
        <label>Week of</label>
        <type>Date</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>AllExpenses</fullName>
        <columns>Week_of__c</columns>
        <columns>Projects__c</columns>
        <columns>Resource__c</columns>
        <columns>REPORT_TOTAL__c</columns>
        <columns>Submit__c</columns>
        <columns>Approve__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Expenses</label>
    </listViews>
    <nameField>
        <displayFormat>Expense {000}</displayFormat>
        <label>Expense#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>